--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,12 +18,10 @@ env:
 jobs:
   cgps:
     runs-on: ubuntu-latest
+    permissions: write-al
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          repository: "mrrfv/cloudflare-gateway-pihole-scripts"
-          ref: "v1"
 
       - name: Install Node.js
         uses: actions/setup-node@v3
