--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ env:
 jobs:
   cgps:
     runs-on: ubuntu-latest
-    permissions: write-al
+    permissions: write-all
     steps:
       - name: Checkout
         uses: actions/checkout@v4
